--- a/index1.html
+++ b/index1.html
@@ -988,6 +988,10 @@
 <tr><td>VIII</td><td>#---</td><td>#898</td><td><img src='S:\local.store\dev\html\pokemon_html\images\898.png' alt=></td><td>Calyrex</td><td>Psychic</td><td>Grass</td></tr>
 <tr><td>VIII</td><td>#---</td><td>#898</td><td><img src='S:\local.store\dev\html\pokemon_html\images\898.png' alt=></td><td>Calyrex</td><td>Psychic</td><td>Ice</td></tr>
 <tr><td>VIII</td><td>#---</td><td>#898</td><td><img src='S:\local.store\dev\html\pokemon_html\images\898.png' alt=></td><td>Calyrex</td><td>Psychic</td><td>Ghost</td></tr>
-    </table>
+<tr><td>VIII</td><td>#---</td><td>#---</td><td><img src='' alt=></td><td>Basculegion</td><td>Water</td><td>Ghost</td></tr>
+<tr><td>VIII</td><td>#---</td><td>#---</td><td><img src='' alt=></td><td>Wyrdeer</td><td>Normal</td><td>Psychic</td></tr>
+<tr><td>VIII</td><td>#---</td><td>#---</td><td><img src='' alt=></td><td>Kleavor</td><td>Bug</td><td>Rock</td></tr>
+    
+</table>
 </body>
 </html>
